add filter capacity for GET endpoint